--- a/_config.yml
+++ b/_config.yml
@@ -7,16 +7,16 @@
 
 # Site settings
 title: UnkL4b
-email: unkl4b@protonmail.com
+email: unk.l4b@protonmail.com
 date_format: "%d-%m-%Y"
 #description: > # this means to ignore newlines until "baseurl:"
 #  Write an awesome description for your new site here. You can edit this
 ##  line in _config.yml. It will appear in your document head meta (for
 #  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://127.0.0.1:4000" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://unkl4b.github.io" # the base hostname & protocol for your site
+twitter_username: danilo_vaz_
+github_username:  unkl4b
 
 # Build settings
 markdown: kramdown
