--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ github_username: UnkL4b
 #linkedin_public_url: loremipsum # Example: For public profile 'www.linkedin.com/in/john-smith', 'john-smith' is your linkedin_public_url
 #disqus_username: loremipsum
 #profile_picture: https://avatars0.githubusercontent.com/u/18489849
-profile_picture: https://scontent.fcgh8-1.fna.fbcdn.net/v/t1.0-9/25594329_304719576599944_6553404090650440174_n.jpg?oh=00a4f500bfb95e3639cd1b6e4a77697e&oe=5AC143B7
+profile_picture: https://github.com/UnkL4b/unkl4b.github.io/blob/master/photo_2018-04-14_06-02-28.jpg?raw=true
 
 # Build settings
 markdown: kramdown
