--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "http://unkl4b.github.io/" # for test: remove string 'http://victorvoid.git
 username: UnkL4b
 user_title: UnkL4b
 email: unkl4b@protonmail.com
-twitter_username: danilo_vaz_
+twitter_username: UnkL4b
 github_username: UnkL4b
 #gplus_username:  
 #linkedin_public_url: loremipsum # Example: For public profile 'www.linkedin.com/in/john-smith', 'john-smith' is your linkedin_public_url
