--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ links:
 #      new_tab: true
 #      key_trigger: g
 #    - title: Twitter
-#      url: http://www.twitter.com/danilo_vaz_
+#      url: http://www.twitter.com/
 #      key_trigger: t
 #    - title: search
 #      url: ""
